[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Characters/Enemies/Gabyoall/gabyoall_run.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Gabyoall.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.5, 8 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Gabyoall" type="KinematicBody2D"]
position = Vector2( 0, -4 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="collision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "run"
anims/RESET = SubResource( 1 )
anims/run = SubResource( 2 )

[node name="ray_wall_left" type="RayCast2D" parent="."]
scale = Vector2( 0.5, 1 )
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 41

[node name="ray_wall_right" type="RayCast2D" parent="."]
scale = Vector2( 0.5, 1 )
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 41

[node name="ray_ground_right" type="RayCast2D" parent="."]
position = Vector2( 8, 4 )
enabled = true
cast_to = Vector2( 0, 13 )
collision_mask = 8

[node name="ray_ground_left" type="RayCast2D" parent="."]
position = Vector2( -8, 4 )
enabled = true
cast_to = Vector2( 0, 13 )
collision_mask = 8
